[package]
name = "pi_debug_info"
version = "0.1.0"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "Whether to print is controlled by conditions"
repository = "https://github.com/GaiaWorld/pi_debug_info.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "pi_debug_info", "debug"]

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
	"console",
]

[features]
default = []
print=[]
wasm-bindgen=["web-sys"]